# Enssemble.io

./: .gitignore  00-SAM2695-Index.md  AGENT.MD  CLAUDE.MD  GM_VOICINGS.md  PLANNING.md  README.md  Spatial Acoustic Architecture.md  TASKS.md
3D_Design/: AmyBoardCasing_03.stl  AmyCase.plasticity
3D_Design/plasticity/: AmyCase_hour2.plasticity  AmyCase_prev1.plasticity  AmyCase_prev2.plasticity
AmyBoard/NSMBL_Aufde/: CMakeLists.txt
AmyBoard/NSMBL_Bridge/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
AmyBoard/NSMBL_EEnoo/: CMakeLists.txt
AmyBoard/NSMBL_Kneel/: CMakeLists.txt
AmyBoard/NSMBL_Pryns/: CMakeLists.txt
AmyBoard/NSMBL_SampleKits/: CMakeLists.txt  sdkconfig.defaults
AmyBoard/NSMBL_SmplCty/: CMakeLists.txt
AmyBoard/NSMBL_Synth/: CMakeLists.txt  sdkconfig.defaults
AmyBoard/NSMBL_Synth/components/amy/: CMakeLists.txt
AmyBoard/configs/: config_Aufde.h  config_Botsee.h  config_EEnoo.h  config_Eenoo.h  config_Kneel.h  config_Prynz.h
Docs/: 17-SAM2695-basicino-ESP-IDF-Breakdown.md  GitHub - shorepine:amy- AMY - A high-performance fixed-point Music synthesizer librarY for microcontrollers · GitHub.webloc  SAM2695_MIDI_Reference.md
Docs/XIAO MIDI Synthesizer/: 00-SAM2695-Index_1.md  18-SAM2695-Ensemble-Voice-Pattern_1.md  SAM2695.md  SAM2695_MIDI_Reference.md  XIAO ESP32-C3 MIDI Synthesizer – Simple DIY Electronic Music Projects.webloc  XIAO MIDI Synthesizer_WIKI.md  (+3 more)
Mozaic/: NSMBL_EEnoo_Controller.moz  NSMBL_EEnoo_PatchSelect.moz  NSMBL_EEnoo_SoundShaper.moz  NSMBL_XIAO_Controller.moz
site/: index.html
(+204 files in other folders)
